# serializer version: 1
# name: test_blind_entity_setup[mock_blind][cover.test_blind-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_blind',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.BLIND: 'blind'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 255>,
    'translation_key': None,
    'unique_id': '4711',
    'unit_of_measurement': None,
  })
# ---
# name: test_blind_entity_setup[mock_blind][cover.test_blind-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 60,
      <CoverEntityStateAttribute.CURRENT_TILT_POSITION: 'current_tilt_position'>: 75,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'blind',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Blind',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 255>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_blind',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Awning][cover.test_awning-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_awning',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.AWNING: 'awning'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Awning',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Awning][cover.test_awning-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'awning',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Awning',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_awning',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_dualrollershutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_DualRollerShutter',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test DualRollerShutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_dualrollershutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter_lower_shutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_dualrollershutter_lower_shutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lower shutter',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': 'Lower shutter',
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'dual_roller_shutter_lower',
    'unique_id': 'serial_DualRollerShutter_lower',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter_lower_shutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test DualRollerShutter Lower shutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_dualrollershutter_lower_shutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter_upper_shutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_dualrollershutter_upper_shutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper shutter',
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': 'Upper shutter',
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': 'dual_roller_shutter_upper',
    'unique_id': 'serial_DualRollerShutter_upper',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-DualRollerShutter][cover.test_dualrollershutter_upper_shutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test DualRollerShutter Upper shutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_dualrollershutter_upper_shutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-GarageDoor][cover.test_garagedoor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_garagedoor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GARAGE: 'garage'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_GarageDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-GarageDoor][cover.test_garagedoor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'garage',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test GarageDoor',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_garagedoor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Gate][cover.test_gate-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_gate',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.GATE: 'gate'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Gate',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Gate][cover.test_gate-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'gate',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Gate',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_gate',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-RollerShutter][cover.test_rollershutter-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_rollershutter',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_RollerShutter',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-RollerShutter][cover.test_rollershutter-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'shutter',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test RollerShutter',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_rollershutter',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Window][cover.test_window-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.test_window',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'velux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 15>,
    'translation_key': None,
    'unique_id': 'serial_Window',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_entity_setup[mock_cover_type-Window][cover.test_window-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CoverEntityStateAttribute.CURRENT_POSITION: 'current_position'>: 70,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Window',
      <CoverEntityStateAttribute.IS_CLOSED: 'is_closed'>: False,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CoverEntityFeature: 15>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.test_window',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
